--- a/tests/redis_timeseries_manager.ipynb
+++ b/tests/redis_timeseries_manager.ipynb
@@ -38,12 +38,18 @@
     "        self._set_rule(source_key, dest_key, aggregation_type, bucket_size_secs)\n",
     "\n",
     "\n",
-    "test_settings = {\n",
+    "default_test_settings = {\n",
     "    'host': 'localhost',\n",
     "    'port': 6379,\n",
-    "    'db': 13,\n",
+    "    'db': 0,\n",
     "    'password': None,\n",
     "}\n",
+    "try:\n",
+    "    from settings import test_settings\n",
+    "except:\n",
+    "    test_settings = None\n",
+    "test_settings = test_settings or default_test_settings\n",
+    "\n",
     "tl = RedisTimeseriesManagerTests(**test_settings)"
    ]
   },
@@ -88,7 +94,8 @@
     "        data=data1,\n",
     "        c1='crypto',\n",
     "        c2_position=0,\n",
-    "        create_inplace=True\n",
+    "        create_inplace=True,\n",
+    "        extra_labels={'iscrypto': 'yes'}\n",
     "    )\n",
     "    tl.add(\n",
     "        data=data2,\n",
@@ -131,6 +138,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test labels\n",
+    "def test_labels():\n",
+    "    reset_test_data()\n",
+    "    tl.add_line(\n",
+    "        line='l3',\n",
+    "        default_value=3,\n",
+    "        extra_labels={\n",
+    "            'foo': 'bar',\n",
+    "            'test': 'ok'\n",
+    "        }\n",
+    "    )\n",
+    "    labels = tl.stats(c1='crypto', c2='btc', timeframe='5s', line='l2').labels\n",
+    "    assert labels['c1'] == 'crypto', 'core label was not set'\n",
+    "    assert labels['iscrypto'] == 'yes', 'extra label utilizing add() with inplace was not set'\n",
+    "    labels = tl.stats(c1='crypto', c2='btc', timeframe='5s', line='l3').labels\n",
+    "    assert labels['foo'] == 'bar', 'extra label for new line was not set'\n",
+    "    assert labels['test'] == 'ok'\n",
+    "    assert labels['c1'] == 'crypto'\n",
+    "    return True\n",
+    "# test_labels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# test rules\n",
     "def test_rules():\n",
     "    reset_test_data()\n",
@@ -159,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,12 +301,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_all():\n",
     "    assert test_add_remove_line() == True\n",
+    "    assert test_labels() == True\n",
     "    assert test_rules() == True\n",
     "    assert test_last_n_records() == True\n",
     "    assert test_last_record() == True\n",
@@ -283,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
