--- a/tests/redis_timeseries_manager.ipynb
+++ b/tests/redis_timeseries_manager.ipynb
@@ -305,6 +305,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test update values\n",
+    "def test_update_values():\n",
+    "    c1 = \"crypto\"\n",
+    "    c2 = \"eth\"\n",
+    "    timestamp = 103\n",
+    "    reset_test_data()\n",
+    "    success, result1 = tl.read(\n",
+    "        c1=c1,\n",
+    "        c2=c2,\n",
+    "        from_timestamp=timestamp,\n",
+    "        to_timestamp=timestamp,\n",
+    "        from_timestamp_inclusive=True,\n",
+    "        return_as='dict'\n",
+    "    )\n",
+    "    assert success is True, result1\n",
+    "    success, updated = tl.update_values(\n",
+    "        c1=c1,\n",
+    "        c2=c2,\n",
+    "        timestamp=timestamp,\n",
+    "        values={\n",
+    "            'l2': 120\n",
+    "        }\n",
+    "    )\n",
+    "    assert success is True, updated\n",
+    "    success, result2 = tl.read(\n",
+    "        c1=c1,\n",
+    "        c2=c2,\n",
+    "        from_timestamp=timestamp,\n",
+    "        to_timestamp=timestamp,\n",
+    "        from_timestamp_inclusive=True,\n",
+    "        return_as='dict'\n",
+    "    )\n",
+    "    assert success is True, result2\n",
+    "    assert result1['l1'][0] == result2['l1'][0], f\"`l1` has been changed to {result2['l1'][0]}\"\n",
+    "    assert result2['l2'][0] == 120, f\"`l2` must be 120\"\n",
+    "    return True\n",
+    "# test_update_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def test_all():\n",
     "    assert test_add_remove_line() == True\n",
     "    assert test_labels() == True\n",
@@ -314,12 +359,13 @@
     "    assert test_last_nth_record() == True\n",
     "    assert test_delete_classifier_keys() == True\n",
     "    assert test_clear_data() == True\n",
+    "    assert test_update_values() == True\n",
     "    print(\"All tests have been passed.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
