--- a/examples/market_data.ipynb
+++ b/examples/market_data.ipynb
@@ -112,21 +112,21 @@
     "    irx_usd.append([ts, usd[0], usd[0], usd[0], usd[0], usd[1]])\n",
     "\n",
     "# adding data\n",
-    "print(md.add(\n",
+    "print(md.insert(\n",
     "    data=crypto_btc,\n",
     "    c1='crypto',\n",
     "    c2='btc',\n",
     "    create_inplace=True,\n",
     ")[1], 'records inserted for crypto:btc:raw')\n",
     "\n",
-    "print(md.add(\n",
+    "print(md.insert(\n",
     "    data=crypto_eth,\n",
     "    c1='crypto',\n",
     "    c2='eth',\n",
     "    create_inplace=True,\n",
     ")[1], 'records inserted for crypto:eth:raw')\n",
     "\n",
-    "print(md.add(\n",
+    "print(md.insert(\n",
     "    data=irx_usd,\n",
     "    c1='irx',\n",
     "    c2='usd',\n",
@@ -481,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Sep 28 2021, 16:10:42) \n[GCC 9.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
