--- a/examples/output_formats_demonstration.ipynb
+++ b/examples/output_formats_demonstration.ipynb
@@ -68,7 +68,7 @@
     "        ['eth', 103, 11, 12],\n",
     "        ['eth', 104, 13, 14],\n",
     "    ]\n",
-    "    tl.add(\n",
+    "    tl.insert(\n",
     "        data=data1,\n",
     "        c1='crypto',\n",
     "        c2_position=0,\n",
