--- a/examples/sensor_data.ipynb
+++ b/examples/sensor_data.ipynb
@@ -138,12 +138,12 @@
     "    sensor1.append([ts, random.randint(20, 30), random.randint(70, 90)])\n",
     "    sensor2.append([ts, random.randint(-10, 0), random.randint(10, 20)])\n",
     "# adding data\n",
-    "sd.add(\n",
+    "sd.insert(\n",
     "    data=sensor1,\n",
     "    c1='building1',\n",
     "    c2='sensor1',\n",
     ")\n",
-    "sd.add(\n",
+    "sd.insert(\n",
     "    data=sensor2,\n",
     "    c1='building1',\n",
     "    c2='sensor2',\n",
@@ -336,7 +336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -350,12 +350,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Sep 28 2021, 16:10:42) \n[GCC 9.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a9a35b091649adc0b60aba6f844a71a4dee49059584755cde36dee92cb158709"
+    "hash": "2d702cda0469abe790a77633ff0c44a34d021c77dc3d2015e1d2d01a502c51d1"
    }
   }
  },
