--- a/tests/redis_timeseries_manager.ipynb
+++ b/tests/redis_timeseries_manager.ipynb
@@ -90,14 +90,14 @@
     "        )\n",
     "        v += 2\n",
     "\n",
-    "    tl.add(\n",
+    "    tl.insert(\n",
     "        data=data1,\n",
     "        c1='crypto',\n",
     "        c2_position=0,\n",
     "        create_inplace=True,\n",
     "        extra_labels={'iscrypto': 'yes'}\n",
     "    )\n",
-    "    tl.add(\n",
+    "    tl.insert(\n",
     "        data=data2,\n",
     "        c1='irx',\n",
     "        c2_position=0,\n",
@@ -151,7 +151,7 @@
     "    )\n",
     "    labels = tl.stats(c1='crypto', c2='btc', timeframe='5s', line='l2').labels\n",
     "    assert labels['c1'] == 'crypto', 'core label was not set'\n",
-    "    assert labels['iscrypto'] == 'yes', 'extra label utilizing add() with inplace was not set'\n",
+    "    assert labels['iscrypto'] == 'yes', 'extra label utilizing insert() with inplace was not set'\n",
     "    labels = tl.stats(c1='crypto', c2='btc', timeframe='5s', line='l3').labels\n",
     "    assert labels['foo'] == 'bar', 'extra label for new line was not set'\n",
     "    assert labels['test'] == 'ok'\n",
@@ -306,7 +306,7 @@
    "outputs": [],
    "source": [
     "# test update values\n",
-    "def test_update_values():\n",
+    "def test_update():\n",
     "    c1 = \"crypto\"\n",
     "    c2 = \"eth\"\n",
     "    timestamp = 103\n",
@@ -320,7 +320,7 @@
     "        return_as='dict'\n",
     "    )\n",
     "    assert success is True, result1\n",
-    "    success, updated = tl.update_values(\n",
+    "    success, updated = tl.update(\n",
     "        c1=c1,\n",
     "        c2=c2,\n",
     "        timestamp=timestamp,\n",
@@ -341,7 +341,7 @@
     "    assert result1['l1'][0] == result2['l1'][0], f\"`l1` has been changed to {result2['l1'][0]}\"\n",
     "    assert result2['l2'][0] == 120, f\"`l2` must be 120\"\n",
     "    return True\n",
-    "# test_update_values()"
+    "# test_update()"
    ]
   },
   {
@@ -359,7 +359,7 @@
     "    assert test_last_nth_record() == True\n",
     "    assert test_delete_classifier_keys() == True\n",
     "    assert test_clear_data() == True\n",
-    "    assert test_update_values() == True\n",
+    "    assert test_update() == True\n",
     "    print(\"All tests have been passed.\")"
    ]
   },
