--- a/examples/output_formats_demonstration.ipynb
+++ b/examples/output_formats_demonstration.ipynb
@@ -673,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Sep 28 2021, 16:10:42) \n[GCC 9.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
